--- a/LifeExpectancy_DeepLearning.ipynb
+++ b/LifeExpectancy_DeepLearning.ipynb
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Deep Model\n",
+    "## 6. Deep Learning Model\n",
     "###  6.1 with optimizer = SGD"
    ]
   },
